--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1292,7 +1292,7 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			background-image: url("../../images/My1.png");
+			background-image: url("../../images/New\ Project\ \(1\).jpg");
 			background-size: 5.5rem 5.5rem;
 
 			width: 5.5rem;
